🚧 fix spacing

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -254,7 +254,7 @@ hr {
 	width: 100%;
 }
 
-/* controls */
+/* controls (navigation button area) */
 ul.control {
 	height: 1em;
 	margin-top: var(--space-l);
@@ -266,6 +266,10 @@ ul.control {
 	}
 
 	span + a {
+		margin-left: var(--space-s);
+	}
+
+	.pvp-icon {
 		margin-left: var(--space-s);
 	}
 }
